# Daily_Maximum_Temperature_Forecasting_in_Southern_VietNam

./: README.md  dashboard_evaluation.py  pyproject.toml
notebooks/: 2_FeatureEngineering.ipynb  3_Modelling.ipynb  4_Hyperparameter_Optimization.ipynb  5_Evaluation_and_Export.ipynb
src/utils/: rolling_origin_cv.py
