[project]
name = "ady201m-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.4",
    "ipykernel>=6.30.1",
    "joblib>=1.3.0",
    "lightgbm>=4.6.0",
    "loadenv>=0.1.1",
    "matplotlib>=3.10.6",
    "ngrok>=1.4.0",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "optuna-dashboard>=0.20.0",
    "pandas>=2.3.3",
    "plotly>=5.17.0",
    "prophet>=1.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "statsmodels>=0.14.0",
    "streamlit>=1.28.0",
    "supabase>=2.23.2",
    "tabulate>=0.9.0",
    "uvicorn[standard]>=0.30.0",
    "wheel>=0.45.1",
    "xgboost>=1.7.0",
]
